# sailor

./: .env.railway.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile.ci  Dockerfile.mcp-http  Dockerfile.mcp-stdio  Dockerfile.railway  MANIFEST.in  MCP_ENHANCEMENT_PLAN.md  MCP_SERVER_GUIDE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PRODUCTION.md  Procfile  README.md  README_GITHUB_PAGES.md  WORKING_FEATURES.md  action.yml  conftest.py  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  project-structure.md  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  run_all_tests.sh  sailor_cli.py  setup.py  setup_fastmcp.py  test_example.md  test_fastmcp_migration.py  test_phase2_tools.py  test_server_startup.py
.claude/: CLAUDE.md
.github/workflows/: jekyll-gh-pages.yml  sailor-docs.yml
backend/: .env.example  Dockerfile  Dockerfile.mcp  app.py  mcp_config.json  mcp_server.py  requirements.txt
backend/static/: app.js  index.html  styles.css
backend/static/css/: style.css
backend/static/js/: app.js
backend/templates/: index.html
docs/: .gitignore  DOCKER.md  GITHUB_PAGES_INTEGRATION.md  GITHUB_PAGES_SETUP.md  Gemfile  RAILWAY_DEPLOYMENT.md  README.md  _config.yml  admin-guide.md  index.md  operations-guide.md  setup-guide.md  showcase.md  troubleshooting-guide.md  ux-design.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/archive/: QA_ASSESSMENT_REPORT.md
docs/archive/migration/: FASTMCP_MIGRATION.md  FASTMCP_MIGRATION_PLAN.md  FASTMCP_MIGRATION_REPORT.md  MIGRATION.md  MIGRATION_SUMMARY.md
docs/assets/css/: custom.css
e2e-tests/: conftest.py  pytest.ini
e2e-tests/tests/: test_accessibility.py  test_api_health.py  test_diagram_editing.py  test_examples.py  test_generation.py  test_page_load.py  test_responsive.py  test_style_controls.py
examples/jekyll-site/: _config.yml  index.md
examples/jekyll-site/.github/workflows/: build-and-deploy.yml
frontend/: .env.example  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
monitoring/: grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
sailor-ui/: architecture.md  requirements.txt
sailor_mcp/: __init__.py  http_server.py  mermaid_resources.py  prompts.py  renderer.py  server.py  stdio_wrapper.py  validators.py
scripts/: docker-build-metrics.sh  run_tests.py
src/: __init__.py
src/sailor/: __init__.py
src/sailor/api/: __init__.py  __main__.py  models.py  server.py  websocket.py
src/sailor/core/: __init__.py  generator.py  renderer.py  validator.py
src/sailor/mcp/: server.py
src/sailor_mcp/: __init__.py  __main__.py  exceptions.py  http_server.py  http_server_minimal.py  http_server_v2.py  logging_config.py  mermaid_resources.py  mocks.py  prompts.py  renderer.py  server.py  server_fastmcp.py  stdio_wrapper.py  validators.py
tests/: __init__.py  conftest.py  test_migration.py  verify_p2_monitoring.py
tests/integration/: __init__.py  test_mcp_integration.py  test_rendering_integration.py
tests/unit/: test_prompts.py  test_renderer.py  test_server.py  test_server_direct.py  test_server_fastmcp.py  test_validators.py
