[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sailor"
version = "2.0.0"
description = "Beautiful Mermaid diagram creation tool with MCP server and web UI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sailor Team", email = "team@sailor.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.9"
dependencies = [
    # Core
    "mcp-python>=0.1.0",
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
    
    # Rendering
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
    
    # Web/API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.25.0",
    
    # AI
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.15.0",
    "tiktoken>=0.5.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

redis = [
    "redis>=5.0.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aj-geddes/sailor"
Documentation = "https://sailor.dev/docs"
Issues = "https://github.com/aj-geddes/sailor/issues"

[project.scripts]
sailor = "sailor.cli:main"
sailor-mcp = "sailor.mcp.server:main"
sailor-api = "sailor.api.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.isort]
known-first-party = ["sailor"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/sailor"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]